-feature#5021: Allow form input validation to be reported to GUI
-feature#5025: Add Least Squares Special Data Types to Cacti
-feature#5027: Add Service Check Filter and Column and Device Thread Column
-feature#5039: Add host_poller_id replacement variable
-feature#5083: Make user log ask for confirmation on purge
-feature#5120: Define cacti system paths as constants for better code checking
-feature#5148: Allow theme-based include paths with master location
-feature#5149: Allow CSS files to be loaded async #5149
-feature#5163: DSSTATS - Add Additional Data Source Statics to Cacti
-feature#5165: DSSTATS - Change data_source_stats_hourly_cache from Memory to INNODB
-feature#5178: DSSTATS - Allow Retention of Daily, Weekly, Monthly and Yearly data for varying periods
-feature#5215: DSSTATS - Cache the RRDtool Logic in a table to speed calculation of the staticis gathering
-feature#5273: Add support for RRD --left-axis-format Options
-feature#5278: Enhance Cacti's ping to use fping if it's installed to take advantage of sub-second timeouts
-feature#5305: Remove files aggregate_items.php and color_templates_items.php and consolidate into their parents
-feature: Allow messages to be popup notifications
-feature: Upgrade billboard.js to version 3.7.4
-feature: Upgrade d3.js to version 7.8.2

1.2.25
-issue#5254: Created a data source template to specify the snmp port, but it doesn't seem to work properly
-issue#5255: Data query xml path with space problem
-issue#5258: Warnings occur when installing thold plugin and as such thold will not upgrade correctly
-issue#5259: When the Data Template contains more Data Sources than the Graph Template RRDfiles won't update
-issue#5263: Warnings in Cacti log when re-indexing devices
-issue#5272: Boost continues to loose data when archive tables are missed due to overloaded MariaDB
-issue#5275: Boost stats can display odd values when running
-issue#5277: Boost should not attempt to start if there are no poller_output_boost records